--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,9 @@
 root = true
 
 [*]
-end_of_line = lf
 charset = utf-8
+end_of_line = lf
+max_line_length = 120
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
