--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "license" : "BSD-3-Clause",
+  "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
     "url": "https://github.com/jsmesami/imposter-frontend.git"
@@ -12,6 +12,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "karma": "^1.7.1",
+    "karma-cljs-test": "^0.1.0",
+    "karma-firefox-launcher": "^1.0.1",
     "normalize.css": "^7.0.0",
     "svgxuse": "^1.2.4"
   },
