--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "license": "BSD-3-Clause",
+  "name": "imposter-frontend",
+  "version": "1.0.3",
+  "license": "EPL",
   "repository": {
     "type": "git",
     "url": "https://github.com/jsmesami/imposter-frontend.git"
